# motion_profile_generator

./: CMakeLists.txt  CmakeLists.txt  README.md  grapheditorview.cpp  grapheditorview.h  graphnodeitem.cpp  graphnodeitem.h  main.cpp  mainwindow.cpp  mainwindow.h  motionmodels.cpp  motionmodels.h  test  test2.txt
src/: main.cpp
src/core/: commands.cpp  commands.h  grapheditorview.cpp  grapheditorview.h  graphnodeitem.cpp  graphnodeitem.h  mainwindow.cpp  mainwindow.h  motionmodels.cpp  motionmodels.h
